--- a/LeetCode/pom.xml
+++ b/LeetCode/pom.xml
@@ -9,6 +9,16 @@
   <name>service</name>
   <packaging>jar</packaging>
 
+
+  <dependencies>
+    <!-- 工具类 -->
+    <dependency>
+      <groupId>cn.hutool</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>4.4.2</version>
+    </dependency>
+  </dependencies>
+
   <build>
     <plugins>
       <plugin>
